Modify elasticsearch config to output GC logs